--- a/style.css
+++ b/style.css
@@ -20,13 +20,13 @@ body {
 
 /* Style the main content */
 h1 {
-    font-size: 3vw;
+    font-size: clamp(18px, 4vw, 50px);
     margin-top: 20px;
     color: #000000; /* White text color for the heading */
 }
 
 p {
-    font-size: 2vw;
+    font-size: clamp(15px, 3vw, 25px);
     line-height: 2;
     margin-top: 10px;
     padding: 0 20px;
@@ -99,68 +99,68 @@ a:hover {
   display:block;
   position: fixed;
   margin-top:400px;
-  top: 0;
+  top: -10vh;
   left:0;
   width:100%;
   height:50%;
 }
 .firstName{
   position:absolute;
-  width:24.5vw;
-  height:40px;
-  left:25%;
-  top:10%;
+  width:33vw;
+  height:4vh;
+  left:15%;
+  top:10vh;
   border: none;
   border-radius:5px;
   text-align:center;
   font-family: 'Fira Sans', sans-serif;
-  font-size:15px;
+  font-size: clamp(10px, 1.5vw, 15px);
 }
 .lastName{
   position:absolute;
-  width:24.5vw;
-  height:40px;
-  left:50.5%;
-  top:10%;
+  width:33vw;
+  height:4vh;
+  left:50%;
+  top:10vh;
   border: none;
   border-radius:5px;
   text-align:center;
   font-family: 'Fira Sans', sans-serif;
-  font-size:15px;
+  font-size: clamp(10px, 1.5vw, 15px);
 }
 
 .Email{
   position:absolute;
-  width:50vw;
-  height:40px;
-  left:25%;
-  top:20%;
+  width:68vw;
+  height:4vh;
+  left:15%;
+  top:16vh;
   border: none;
   border-radius:5px;
   text-align:center;
   font-family: 'Fira Sans', sans-serif;
-  font-size:15px;
+  font-size: clamp(10px, 1.5vw, 15px);
 }
 
 .description{
   position:absolute;
   resize:none;
-  width:50vw;
-  height:100px;
-  top:30%;
-  left:25%;
+  width:68vw;
+  height:10vh;
+  top:22vh;
+  left:15%;
   border: none;
   border-radius:5px;
   text-align:center;
   font-family: 'Fira Sans', sans-serif;
-  font-size:15px;
+  font-size: clamp(10px, 1.5vw, 15px);
 }
 
 input[type='submit']{
   position:absolute;
   width:50vw;
-  height:40px;
-  top:55%;
+  height:4vh;
+  top:34vh;
   left:25%;
   border: none;
   border-radius:5px;
@@ -168,7 +168,7 @@ input[type='submit']{
   color:#ffffff;
   text-align:center;
   font-family: 'Fira Sans', sans-serif;
-  font-size:15px;
+  font-size: clamp(10px, 1.5vw, 15px);
   transition: 400ms ease;
 }
 
@@ -180,6 +180,8 @@ input[type='submit']:hover{
 }
 
 img{
-  height:30vw;
-  width:30vw;
+  height:40vw;
+  max-height:400px;
+  width:40vw;
+  max-width:400px;
 }
